[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Images_Imported.gd" type="Script" id=1]

[node name="Images_Imported" type="Node2D" groups=[
"Images",
]]
z_index = 50
script = ExtResource( 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_top = 20.0
margin_right = 200.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 200, 200 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Sprite" type="Sprite" parent="ViewportContainer/Viewport"]
position = Vector2( 0, 45 )
centered = false

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/Viewport"]
position = Vector2( 100, 100 )
current = true

[node name="ColorRect" type="ColorRect" parent="ViewportContainer/Viewport/Camera2D"]
margin_right = 5.0
margin_bottom = 5.0
color = Color( 1, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 200.0
margin_bottom = 20.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="ColorRect"]
margin_left = 120.0
margin_top = 20.0
margin_right = 194.0
margin_bottom = 44.0
text = "Control"

[node name="Close" type="Button" parent="."]
margin_left = 180.0
margin_right = 200.0
margin_bottom = 20.0
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="."]
margin_right = 160.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="Button" parent="."]
margin_left = 160.0
margin_right = 180.0
margin_bottom = 20.0
text = "_"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X_Scale" type="SpinBox" parent="."]
margin_top = 20.0
margin_right = 74.0
margin_bottom = 44.0
step = 0.001
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grow" type="Button" parent="."]
margin_left = 180.0
margin_top = 200.0
margin_right = 200.0
margin_bottom = 220.0
text = ">"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="ColorRect/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="button_down" from="Move" to="." method="_on_Move_button_down"]
[connection signal="button_up" from="Move" to="." method="_on_Move_button_up"]
[connection signal="pressed" from="Hide" to="." method="_on_Hide_pressed"]
[connection signal="value_changed" from="X_Scale" to="." method="_on_X_Scale_value_changed"]
[connection signal="button_down" from="Grow" to="." method="_on_Grow_button_down"]
[connection signal="button_up" from="Grow" to="." method="_on_Grow_button_up"]
